--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="ga_trackingId" translatable="false">REPLACE_ME</string>
+    <bool name="ga_autoActivityTracking">true</bool>
+
+    <screenName name="com.tickengo.rider.ui.SplashActivity">Splash</screenName>
+
 </resources>
