--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="ga_trackingId" translatable="false">REPLACE_ME</string>
-    <bool name="ga_autoActivityTracking">true</bool>
+    <!--<bool name="ga_autoActivityTracking">true</bool>-->
 
-    <screenName name="com.troshchiy.analytics.MainActivity">Main Activity</screenName>
+    <!--<screenName name="com.troshchiy.analytics.MainActivity">Main Activity</screenName>-->
 
 </resources>
