--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -10,18 +10,19 @@
         android:id="@+id/btn_a"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Event A"
+        android:text="Action A"
         app:layout_constraintBottom_toTopOf="@+id/btn_b"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/btn_b"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Event B"
+        android:layout_marginTop="24dp"
+        android:text="Action B"
         app:layout_constraintBottom_toTopOf="@+id/btn_c"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -31,7 +32,8 @@
         android:id="@+id/btn_c"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Event C"
+        android:layout_marginTop="24dp"
+        android:text="Action C"
         app:layout_constraintBottom_toTopOf="@+id/btn_firstActivity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,6 +43,7 @@
         android:id="@id/btn_firstActivity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="Open First Activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
